--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ input[type=text], select {
 
 .form-app {
   background-color: #525496;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   justify-content: flex-start;
   min-height: 600px;
